--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
     <head>
         <title>HTML Title</title>
   </head>
+    
   <body>
+      <h1>I'm a header 1!</h1>
     Hello there, awesome person! 
   </body>
 </html>
