--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   <body>
       <h1>I'm a header 1!</h1>
     Hello there, awesome person! 
+      <img src="https://avatars.githubusercontent.com/u/63690069?v=4">
+
   </body>
 </html>
