--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>HTML Title</title>
   </head>
   <body>
-    Hello there, awesome person! 
+    <h1>Hello and Welcome</h1>
   </body>
 </html>
