--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li>Is an</li>
     <li>Unordered list</li>
 </ul>
+       <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
       <h1>I'm a header 1!</h1>
     Hello there, awesome person! 
       <img src="https://avatars.githubusercontent.com/u/63690069?v=4">
